--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Introdução à Informática - Checkpoint 02</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Introdução à Informática - Checkpoint 02</h1>
+      </header>
+      <div class="steps">
+        <div class="page">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+
+        </div>
+        <div class="sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
+        </div>
+      </div>
+      <footer>xxx
+        <div class="logos">
+          <img src="./img/dhlogo.avif" alt="" />
+          <img src="./img/ctd.svg" alt="" />
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
