--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam iure, architecto molestias asperiores dignissimos delectus, enim odio nesciunt illo dolore officiis velit aliquam esse placeat earum blanditiis harum commodi?</p>
         </div>
       </div>
-      <footer>xxx
+      <footer>
         <div class="logos">
           <img src="./img/dhlogo.avif" alt="" />
           <img src="./img/ctd.svg" alt="" />
