--- a/index.html
+++ b/index.html
@@ -11,23 +11,94 @@
     <div class="wrapper">
       <header>
         <h1>Introdução à Informática - Checkpoint 02</h1>
+        <nav>
+          <ul>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="paradigmas.html">Paradigmas</a></li>
+            <li>Virtualização</li>
+            <li>Redes</li>
+            <li>Internet</li>
+            <li>Segurança</li>
+            <li>Ética</li>
+          </ul>
+        </nav>
       </header>
       <div class="steps">
         <div class="page">
+          <div class="title"><h2>Blog DH</h2></div>
+          <div class="topicImage">
+            <img src="./img/home.jpg" alt="" />
+          </div>
+          <div class="title"><h3>Parabéns</h3></div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-            iure, architecto molestias asperiores dignissimos delectus, enim
-            odio nesciunt illo dolore officiis velit aliquam esse placeat earum
-            blanditiis harum commodi?
+            Chegamos à segunda parte do checkpoint do curso de Introdução à
+            Informática. Este desafio compõe 30% da nota da avaliação final, que
+            somada com os outros checkpoints deverá totalizar 60%.
           </p>
+          <div class="title"><h3>Fique atento</h3></div>
+          <p>
+            Este checkpoint é uma avaliação diagnóstica das aulas anteriores.
+          </p>
+          <ul>
+            <li>A apresentação ocorrerá durante a aula ao vivo (síncrona).</li>
+            <li>É importante ter em mente que esta atividade é obrigatória.</li>
+            <li>
+              Os alunos serão avaliados pela apresentação, por isso é importante
+              que todos tenham um tempo de fala durante o seminário.
+            </li>
+          </ul>
+          <div class="title"><h3>Instruções para o seminário</h3></div>
+          <div class="title"><h3>Objetivo</h3></div>
+          <p>
+            Avaliar os conhecimentos adquiridos ao longo das aulas e o trabalho
+            em equipe dos alunos, além de fazer um uso mais extensivo do GitHub
+            entre o grupo.
+          </p>
+          <div class="title"><h3>Atividade</h3></div>
+          <ol>
+            <li>
+              Serão constituídos grupos de 6 a 8 alunos e cada grupo receberá os
+              seguintes temas para pesquisa:
+            </li>
+            <ol>
+              <li>Paradigmas de programação</li>
+              <li>Virtualização</li>
+              <li>Redes de Computadores</li>
+              <li>Internet</li>
+              <li>Segurança Informática</li>
+              <li>Ética na Informática</li>
+            </ol>
+            <li>
+              Cada grupo será responsável por coletar notícias e relacionar com
+              o que foi visto na sala de aula.
+            </li>
+            <li>
+              A apresentação será feita via GitHub pages, ou seja, criar uma
+              página usando o próprio GitHub e colocar as notícias, uma ou mais
+              imagens e textos nesta página. O formato da página é livre, porém
+              será disponibilizado um template para auxílio do trabalho.
+            </li>
+            <li>
+              A formatação da página <strong>NÃO</strong> será determinante para a nota. O
+              importante é a compreensão da matéria, a relação com a notícia e o
+              uso do GitHub.
+            </li>
+            <li>
+              Todos os integrantes do grupo devem estar como colaboradores e
+              realizarem pelo menos um commit com uma alteração relevante
+              (adição de um texto, correção de alguma característica da página
+              ou inserção da imagem em cada um dos tópicos).
+            </li>
+          </ol>
         </div>
         <div class="sidebar">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-            iure, architecto molestias asperiores dignissimos delectus, enim
-            odio nesciunt illo dolore officiis velit aliquam esse placeat earum
-            blanditiis harum commodi?
-          </p>
+          <div class="title"><h2>Grupo</h2></div>
+          <ul>
+            <li>Aluno 01</li>
+            <li>Aluno 02</li>
+            <li>Aluno 03</li>
+            <li>Aluno 04</li>
+          </ul>
         </div>
       </div>
       <footer>
