Footer Height Resolution Adaptative

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
       <footer>
         <div class="logos">
-          <img src="./img/dhlogo.avif" alt="" />
+          <img src="./img/dhlogo.png" alt="" />
           <img src="./img/ctd.svg" alt="" />
         </div>
       </footer>
