--- a/paradigmas.html
+++ b/paradigmas.html
@@ -247,6 +247,9 @@
             </li>
           </ul>
           <div class="title"><h2>GitHub</h2></div>
+          <div class="topicImage">
+            <img src="./img/github.jpg" alt="" />
+          </div>
           <a href="https://github.com/braulioportela79/intro-info-checkpoint02"
             >Blog DH</a
           >
