Commit teste paradigmas

--- a/paradigmas.html
+++ b/paradigmas.html
@@ -41,7 +41,7 @@
             ipsum dolor sit amet consectetur adipisicing elit. Recusandae, sint
             ipsa. Cum, quos? Reiciendis, maiores non. Nihil perspiciatis
             sapiente iure fugit nobis, laudantium ab, aperiam omnis tempore
-            excepturi, facilis modi?
+            excepturi, facilis modi teste?
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
