--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Segurança Informática</li>
+                <li>Ética na Computação</li>
+              </ul>
             </li>
             <li>
               Douglas Gonçalves
@@ -178,6 +182,9 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Paradigmas da Computação</li>
+              </ul>
             </li>
             <li>
               Geovane Motta
@@ -219,9 +226,12 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Virtualização</li>
+              </ul>
             </li>
             <li>
-              Rodigo Marrama
+              Rodrigo Marrama
               <div class="social__links">
                 <a href="">
                   <svg
@@ -260,6 +270,10 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Redes de Computadores</li>
+                <li>Internet</li>
+              </ul>
             </li>
           </ul>
           <div class="title"><h2>GitHub</h2></div>
