--- a/paradigmas.html
+++ b/paradigmas.html
@@ -121,6 +121,10 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Segurança Informática</li>
+                <li>Ética na Computação</li>
+              </ul>
             </li>
             <li>
               Douglas Gonçalves
@@ -162,6 +166,9 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Paradigmas da Computação</li>
+              </ul>
             </li>
             <li>
               Geovane Motta
@@ -203,9 +210,12 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Virtualização</li>
+              </ul>
             </li>
             <li>
-              Rodigo Marrama
+              Rodrigo Marrama
               <div class="social__links">
                 <a href="">
                   <svg
@@ -244,6 +254,10 @@
                     ></path></svg
                 ></a>
               </div>
+              <ul>
+                <li>Redes de Computadores</li>
+                <li>Internet</li>
+              </ul>
             </li>
           </ul>
           <div class="title"><h2>GitHub</h2></div>
