--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
           <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="paradigmas.html">Paradigmas</a></li>
-            <li>Virtualização</li>
-            <li>Redes</li>
-            <li>Internet</li>
-            <li>Segurança</li>
-            <li>Ética</li>
+            <li><a href="virtualizacao.html">Virtualização</a></li>
+            <li><a href="redes.html">Redes</a></li>
+            <li><a href="internet.html">Internet</a></li>
+            <li><a href="seguranca.html">Segurança</a></li>
+            <li><a href="etica.html">Ética</a></li>
           </ul>
         </nav>
       </header>
