--- a/virtualizacao.html
+++ b/virtualizacao.html
@@ -14,8 +14,8 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="paradigmas.html">Paradigmas</a></li>
-            <li><a href="virtualizacao.html">Virtualização</a></li>
+            <li><a href="paradigmas.html">Paradigmas</a></li>
+            <li class="active"><a href="virtualizacao.html">Virtualização</a></li>
             <li><a href="redes.html">Redes</a></li>
             <li><a href="internet.html">Internet</a></li>
             <li><a href="seguranca.html">Segurança</a></li>
@@ -25,9 +25,9 @@
       </header>
       <div class="steps">
         <div class="page">
-          <div class="title"><h2>Paradigmas da Computação</h2></div>
+          <div class="title"><h2>Virtualização</h2></div>
           <div class="topicImage">
-            <img src="./img/paradigma.png" alt="" />
+            <img src="./img/virtualization.jpeg" alt="" />
           </div>
           <div class="title"><h3>Lorem ipsum dolor sit</h3></div>
           <p>
