Refactoring Internet/Redes Pages

--- a/seguranca copy.html
+++ b/seguranca copy.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Introdução à Informática - Checkpoint 02</title>
   </head>
-
   <body>
     <div class="wrapper">
       <header>
@@ -18,26 +17,21 @@
             <li><a href="paradigmas.html">Paradigmas</a></li>
             <li><a href="virtualizacao.html">Virtualização</a></li>
             <li><a href="redes.html">Redes</a></li>
-            <li class="active"><a href="internet.html">Internet</a></li>
-            <li><a href="seguranca.html">Segurança</a></li>
+            <li><a href="internet.html">Internet</a></li>
+            <li class="active"><a href="seguranca.html">Segurança</a></li>
             <li><a href="etica.html">Ética</a></li>
           </ul>
         </nav>
       </header>
       <div class="steps">
         <div class="page">
-          <div class="title">
-            <h2>Internet</h2>
-          </div>
+          <div class="title"><h2>Segurança Informática</h2></div>
           <div class="topicImage">
-            <img src="./img/internet.jpg" alt="" />
+            <img src="./img/security.jpg" alt="" />
           </div>
           <div class="news">
             <div class="title">
-              <h3>
-                Uso da internet no Brasil cresce, e chega a 81% da população,
-                diz pesquisa
-              </h3>
+              <h3>Redes de computadores é a sua nova conexão com o mundo</h3>
               <div class="info_news">
                 <p>
                   Link da Notícia:
@@ -132,60 +126,64 @@
               </div>
             </div>
             <p>
-              O uso da internet no Brasil cresceu em 2020, passando de 74% para
-              81% da população, o que representa 152 milhões de pessoas. Os
-              dados foram divulgados nesta quarta-feira (18) pela pesquisa TIC
-              Domicílios, realizada pelo Centro Regional de Estudos para o
-              Desenvolvimento da Sociedade da Informação (Cetic.br).
+              A maioria dos serviços que se utiliza hoje em dia são baseados em
+              redes de computadores, sejam de grande porte, como a telefonia e
+              sistemas de satélite, sejam menores, como se ter mais de um
+              computador nas residências ou estar conectado à internet.
             </p>
             <p>
-              A pesquisa apontou que o grupo de domicílios no Brasil com acesso
-              à internet subiu de 71% para 83%. A diferença para a quantidade de
-              usuários existe porque alguns moradores de uma residência podem
-              ter internet, mas não acessá-la. O acesso à internet foi ampliado
-              principalmente nos domicílios das classes C e D/E. Na classe C, a
-              proporção de domicílios com internet subiu de 80%, em 2019, para
-              91%. Nas classes D/E, o índice passou de 50% para 64%.
+              Uma rede de computadores não se limita apenas à troca de infor
+              mações, os dispositivos conectados entre si compa rtilham seus
+              serviços e recursos.
+            </p>
+
+            <p>
+              Há apenas dez anos, poucas eram as redes de computadores
+              existentes. As causas possíveis para essa expansão foram o
+              barateamento dos hardwares necessários para se montar uma rede, o
+              desenvolvimento de sistemas operacionais de rede simples, a
+              expansão da internet, o uso da tecnologia em redes sociais e o
+              aumento da velocidade.
             </p>
             <p>
-              Apesar disso, estes grupos ainda tem níveis de conectividade
-              menores que os da classe A e B, em que 100% e 99% dos domicílios
-              têm acesso à internet, respectivamente. Em 2015, a diferença no
-              acesso à internet entre domicílios da classes A e D/E era de 83
-              pontos percentuais. Em 2020, a distância caiu para 36 pontos
-              percentuais.
+              Essa grande necessidade desse do da informática também decorreu
+              pelas vantagens de seu uso, como segurança, compartilhamento de
+              arquivos e impressoras, e por fim, o acesso à internet, que
+              revolucionou quase todas as áreas de estudos existentes no mundo
             </p>
             <p>
-              A edição de 2020 da TIC Domicílios também indica um crescimento do
-              uso da internet por meio de smart TVs. Em 2019, esses dispositivos
-              eram usados por 37% dos brasileiros. Em 2020, o índice subiu para
-              44%, superando o acesso pelo computador, que permaneceu em 42%. O
-              celular continua como principal dispositivo usado para acessar a
-              internet. Por mais um ano, o aparelho foi usado por 99% dos
-              usuários.
+              Essa realidade criou uma grande demanda por profissionais que têm
+              de se qualificar e se especializar cada vez mais. No mercado de
+              trabalho, o emprego é oferecido em todos os tipos de empresa,
+              pode-se, também, exercer a função como autônomo. A realidade de
+              computadores interligados é uma necessidade em todo meio
+              empresarial, grandes corporações, pequenas e médias empresas,
+              setor de serviços, indústrias, comércio, educação, todos buscam
+              profissionais atuantes na área de redes de computadores.
+            </p>
+            <p>
+              O mercado é tão amplo e continua em plena expansão que vale ainda
+              lembrar a convergência dos vários setores da telefonia fixa e
+              móvel e dos meios de comunicação digital, como a televisão e o
+              rádio.
             </p>
           </div>
           <div class="title">
             <h3>Relação da Notícia com a Matéria em Aula</h3>
           </div>
           <p>
-            Quando abordamos em aula o assunto relacionado a internet, vimos as
-            várias formas de protocolo existentes e como interagem usuário e
-            base de dados, aprendendo o que é remetente, destinatário e como
-            funciona a internet em si. Apesar de ser uma notícia sobre o
-            crescimento o uso da internet, acreditamos que estabeleça conexão
-            com a matéria sob a ótica de demonstrar o quanto esse crescente uso
-            e demanda por mais internet mudará o futuro da computação. Cada vez
-            mais as pessoas tem acesso à internet. Interagir com a mesma virou
-            uma extensão do corpo e as empresas devem se preparar, buscando
-            novas formas de aperfeiçoamento do recebimento e processamento de
-            dados, a fim de entregar uma melhor experiência aos usuários.
+            A notícia vista demonstrar o quanto a cada dia mais estamos
+            conectados a vários serviços que estão hospedados em rede de
+            computadores. Neste sentido, a notícia se relaciona com a matéria,
+            demonstrando os aspectos abordados em sala de aula como por exemplo
+            o alcance das redes, autenticação, conexão que cada usuário tem,
+            demonstrando o quanto cada dia mais é necessário que a conexão de
+            dados seja mais rápida e segura, ou seja, englobando vários aspectos
+            e caractéristicas das redes de computadores no dia a dia.
           </p>
         </div>
         <div class="sidebar">
-          <div class="title">
-            <h2>Grupo</h2>
-          </div>
+          <div class="title"><h2>Grupo</h2></div>
           <div class="topicImage">
             <img src="./img/workgroup.jpg" alt="" />
           </div>
@@ -369,9 +367,7 @@
               </ul>
             </li>
           </ul>
-          <div class="title">
-            <h2>GitHub</h2>
-          </div>
+          <div class="title"><h2>GitHub</h2></div>
           <div class="topicImage">
             <img src="./img/github.jpg" alt="" />
           </div>
