Paradigmas/Virtualizacao Refactor

--- a/virtualizacao.html
+++ b/virtualizacao.html
@@ -15,7 +15,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="paradigmas.html">Paradigmas</a></li>
-            <li class="active"><a href="virtualizacao.html">Virtualização</a></li>
+            <li class="active">
+              <a href="virtualizacao.html">Virtualização</a>
+            </li>
             <li><a href="redes.html">Redes</a></li>
             <li><a href="internet.html">Internet</a></li>
             <li><a href="seguranca.html">Segurança</a></li>
@@ -29,50 +31,77 @@
           <div class="topicImage">
             <img src="./img/virtualization.jpeg" alt="" />
           </div>
-          <div class="title"><h3>Lorem ipsum dolor sit</h3></div>
+          <div class="news">
+            <div class="title">
+              <h3>Lorem ipsum dolor sit</h3>
+              <div class="info_news">
+                <p>
+                  Link da Notícia:
+                  <a href="" target="_blank">Nome do Site</a>
+                </p>
+                <p>Autor: Nome do Autor</p>
+                <p>Data: Data da Notícia</p>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              magnam iure, architecto molestias asperiores dignissimos delectus,
+              enim odio nesciunt illo dolore officiis velit aliquam esse placeat
+              earum blanditiis harum commodi? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Rerum provident sunt id rem tempore
+              commodi voluptatum quidem deleniti eveniet, nostrum quas.
+              Consequuntur alias at doloremque, aut perspiciatis voluptatum
+              architecto ipsam? Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Recusandae, sint ipsa. Cum, quos? Reiciendis,
+              maiores non. Nihil perspiciatis sapiente iure fugit nobis,
+              laudantium ab, aperiam omnis tempore excepturi, facilis modi?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              magnam iure, architecto molestias asperiores dignissimos delectus,
+              enim odio nesciunt illo dolore officiis velit aliquam esse placeat
+              earum blanditiis harum commodi? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Rerum provident sunt id rem tempore
+              commodi voluptatum quidem deleniti eveniet, nostrum quas.
+              Consequuntur alias at doloremque, aut perspiciatis voluptatum
+              architecto ipsam?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              magnam iure, architecto molestias asperiores dignissimos delectus,
+              enim odio nesciunt illo dolore officiis velit aliquam esse placeat
+              earum blanditiis harum commodi? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Rerum provident sunt id rem tempore
+              commodi voluptatum quidem deleniti eveniet, nostrum quas.
+              Consequuntur alias at doloremque, aut perspiciatis voluptatum
+              architecto ipsam?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              magnam iure, architecto molestias asperiores dignissimos delectus,
+              enim odio nesciunt illo dolore officiis velit aliquam esse placeat
+              earum blanditiis harum commodi? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Rerum provident sunt id rem tempore
+              commodi voluptatum quidem deleniti eveniet, nostrum quas.
+              Consequuntur alias at doloremque, aut perspiciatis voluptatum
+              architecto ipsam? Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Recusandae, sint ipsa. Cum, quos? Reiciendis,
+              maiores non. Nihil perspiciatis sapiente iure fugit nobis,
+              laudantium ab, aperiam omnis tempore excepturi, facilis modi?
+            </p>
+          </div>
+          <div class="title">
+            <h3>Relação da Notícia com a Matéria em Aula</h3>
+          </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-            iure, architecto molestias asperiores dignissimos delectus, enim
-            odio nesciunt illo dolore officiis velit aliquam esse placeat earum
-            blanditiis harum commodi? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Rerum provident sunt id rem tempore commodi
-            voluptatum quidem deleniti eveniet, nostrum quas. Consequuntur alias
-            at doloremque, aut perspiciatis voluptatum architecto ipsam? Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Recusandae, sint
-            ipsa. Cum, quos? Reiciendis, maiores non. Nihil perspiciatis
-            sapiente iure fugit nobis, laudantium ab, aperiam omnis tempore
-            excepturi, facilis modi?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-            iure, architecto molestias asperiores dignissimos delectus, enim
-            odio nesciunt illo dolore officiis velit aliquam esse placeat earum
-            blanditiis harum commodi? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Rerum provident sunt id rem tempore commodi
-            voluptatum quidem deleniti eveniet, nostrum quas. Consequuntur alias
-            at doloremque, aut perspiciatis voluptatum architecto ipsam?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-            iure, architecto molestias asperiores dignissimos delectus, enim
-            odio nesciunt illo dolore officiis velit aliquam esse placeat earum
-            blanditiis harum commodi? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Rerum provident sunt id rem tempore commodi
-            voluptatum quidem deleniti eveniet, nostrum quas. Consequuntur alias
-            at doloremque, aut perspiciatis voluptatum architecto ipsam?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-            iure, architecto molestias asperiores dignissimos delectus, enim
-            odio nesciunt illo dolore officiis velit aliquam esse placeat earum
-            blanditiis harum commodi? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Rerum provident sunt id rem tempore commodi
-            voluptatum quidem deleniti eveniet, nostrum quas. Consequuntur alias
-            at doloremque, aut perspiciatis voluptatum architecto ipsam? Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Recusandae, sint
-            ipsa. Cum, quos? Reiciendis, maiores non. Nihil perspiciatis
-            sapiente iure fugit nobis, laudantium ab, aperiam omnis tempore
-            excepturi, facilis modi?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea,
+            deserunt magni. Culpa voluptatem id incidunt mollitia eius
+            praesentium a. Soluta repellat, eum possimus molestiae excepturi
+            nihil corporis. Animi, obcaecati adipisci? Lorem ipsum dolor sit
+            amet consectetur, adipisicing elit. Reprehenderit eveniet iste quis
+            dolores officia hic asperiores error blanditiis, enim totam fugit
+            nobis obcaecati perspiciatis? Exercitationem, repudiandae? Qui
+            delectus repellendus asperiores!
           </p>
         </div>
         <div class="sidebar">
