Members Social Links

--- a/etica.html
+++ b/etica.html
@@ -124,7 +124,7 @@
             <li>
               Braulio Portela
               <div class="social__links">
-                <a href="">
+                <a href="https://www.linkedin.com/in/braulio-portela-699603228/">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -143,7 +143,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/braulioportela79">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -169,7 +169,7 @@
             <li>
               Douglas Gonçalves
               <div class="social__links">
-                <a href="">
+                <a href="https://www.linkedin.com/in/douglas-gon%C3%A7alves-nepomuceno-81b54b32/">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -188,7 +188,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/douglasnepomuceno">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -232,7 +232,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/Geovanemotta">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -257,7 +257,7 @@
             <li>
               Rodrigo Marrama
               <div class="social__links">
-                <a href="">
+                <a href=#>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -276,7 +276,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/marrama98">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
