--- a/paradigmas.html
+++ b/paradigmas.html
@@ -111,7 +111,7 @@
             <li>
               Braulio Portela
               <div class="social__links">
-                <a href="">
+                <a href="https://www.linkedin.com/in/braulio-portela-699603228/">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -130,7 +130,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/braulioportela79">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -156,7 +156,7 @@
             <li>
               Douglas Gonçalves
               <div class="social__links">
-                <a href="">
+                <a href="https://www.linkedin.com/in/douglas-gon%C3%A7alves-nepomuceno-81b54b32/">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -175,7 +175,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/douglasnepomuceno">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -219,7 +219,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/Geovanemotta">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -244,7 +244,7 @@
             <li>
               Rodrigo Marrama
               <div class="social__links">
-                <a href="">
+                <a href=#>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -263,7 +263,7 @@
                     <rect x="2" y="9" width="4" height="12"></rect>
                     <circle cx="4" cy="4" r="2"></circle></svg
                 ></a>
-                <a href="">
+                <a href="https://github.com/marrama98">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
