Sidebar Paradigma Name Fix

--- a/paradigmas.html
+++ b/paradigmas.html
@@ -25,7 +25,7 @@
       </header>
       <div class="steps">
         <div class="page">
-          <div class="title"><h2>Paradigmas da Computação</h2></div>
+          <div class="title"><h2>Paradigmas da Programação</h2></div>
           <div class="topicImage">
             <img src="./img/paradigma.png" alt="" />
           </div>
@@ -194,7 +194,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Computação</li>
+                <li>Paradigmas da Programação</li>
               </ul>
             </li>
             <li>
