--- a/internet.html
+++ b/internet.html
@@ -196,7 +196,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Computação</li>
+                <li>Paradigmas da Programação</li>
               </ul>
             </li>
             <li>
