--- a/redes.html
+++ b/redes.html
@@ -200,7 +200,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Computação</li>
+                <li>Paradigmas da Programação</li>
               </ul>
             </li>
             <li>
