--- a/seguranca.html
+++ b/seguranca.html
@@ -239,7 +239,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Computação</li>
+                <li>Paradigmas da Programação</li>
               </ul>
             </li>
             <li>
