correcao de parte do texto

--- a/virtualizacao.html
+++ b/virtualizacao.html
@@ -79,7 +79,7 @@
             <h3>Relação da Notícia com a Matéria em Aula</h3>
           </div>
           <p>
-            Como vimos em aula, com a virtualização podemos ter um sistema operacional dentro do outro. Uma maquina virtual de sistema operacional por exemplo, emula inteiramente um outro sistema dentro dele mesmo no lugar que chamamos de Hypervisor que é uma camada de software, onde é responsável por atribuir parte do hardware para o novo sistema.
+            Como vimos em aula, com a virtualização podemos ter um sistema operacional dentro do outro. Uma maquina virtual emula inteiramente um outro sistema dentro dele no lugar que chamamos de Hypervisor que é uma camada de software, onde é responsável por atribuir parte do hardware para o novo sistema.
           </p>
           <p>
             Alem disso vimos que com maquinas virtuais podemos experimentar diferentes versões de sistemas operacionais sem ter que alterar nada no computador. Com isso podemos executar desde programas ou aplicações antigas e até mesmo programas exclusivos de outros sistemas. 
